adding csv generator from a bucket_path
